// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ban user 1`] = `
<div
  aria-labelledby="banModal-title"
  className="Modal-root"
  onKeyDown={[Function]}
  role="modal"
>
  <div
    className="Backdrop-root Backdrop-active"
    data-testid="backdrop"
    onClick={[Function]}
  />
  <div
    className="Modal-scroll"
  >
    <div
      className="Modal-alignContainer1"
    >
      <div
        className="Modal-alignContainer2"
      >
        <div
          className="Modal-wrapper"
        >
          <div
            onFocus={[Function]}
            tabIndex={0}
          />
          <div
            tabIndex={-1}
          />
          <div
            className="Card-root BanModal-card"
          >
            <button
              className="BaseButton-root CloseButton-root"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              onTouchEnd={[Function]}
              type="button"
            >
              <span
                aria-hidden="true"
                className="Icon-root Icon-md CloseButton-icon"
              >
                close
              </span>
            </button>
            <div
              className="Box-root HorizontalGutter-root HorizontalGutter-double"
            >
              <div
                className="Box-root HorizontalGutter-root HorizontalGutter-full"
              >
                <h1
                  className="Box-root Typography-root Typography-header2 Typography-colorTextPrimary"
                  id="banModal-title"
                >
                  Are you sure you want to ban 
                  <strong>
                    Isabelle
                  </strong>
                  ?
                </h1>
                <p
                  className="Box-root Typography-root Typography-bodyCopy Typography-colorTextPrimary"
                >
                  Once banned, this user will no longer be able to comment, use
reactions, or report comments.
                </p>
              </div>
              <div
                className="Box-root Flex-root Flex-flex Flex-halfItemGutter Flex-justifyFlexEnd gutter"
              >
                <button
                  className="BaseButton-root Button-root Button-sizeRegular Button-colorRegular Button-variantOutlined"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  type="button"
                >
                  Cancel
                </button>
                <button
                  className="BaseButton-root Button-root Button-sizeRegular Button-colorPrimary Button-variantFilled"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  type="button"
                >
                  Ban User
                </button>
              </div>
            </div>
          </div>
          <div
            onFocus={[Function]}
            tabIndex={0}
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders community 1`] = `
<div
  className="MainLayout-root Community-root"
  data-testid="community-container"
>
  <div
    className="Box-root HorizontalGutter-root HorizontalGutter-double"
  >
    <div
      className="Box-root Flex-root Flex-flex Flex-doubleItemGutter Flex-justifySpaceBetween Flex-alignFlexEnd gutter"
    >
      <div
        className="Box-root Flex-root Flex-flex"
      >
        <fieldset
          className="FieldSet-root"
        >
          <legend
            className="Box-root Typography-root Typography-bodyCopyBold Typography-colorTextPrimary UserTableFilter-legend"
          >
            Search
          </legend>
          <form
            autoComplete="off"
            id="configure-form"
            onSubmit={[Function]}
          >
            <div
              className="TextField-root UserTableFilter-textField"
            >
              <input
                aria-label="Search by username or email address"
                className="TextField-input TextField-colorRegular TextField-seamlessAdornment"
                name="search"
                onChange={[Function]}
                placeholder="Search by username or email address..."
                type="text"
                value=""
              />
              <div
                className="TextField-adornment"
              >
                <button
                  aria-label="Search"
                  className="BaseButton-root Button-root Button-sizeRegular Button-colorDark Button-variantAdornment UserTableFilter-adornment"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  type="submit"
                >
                  <span
                    aria-hidden="true"
                    className="Icon-root Icon-md"
                  >
                    search
                  </span>
                </button>
              </div>
            </div>
          </form>
        </fieldset>
        <fieldset
          className="FieldSet-root"
        >
          <legend
            className="Box-root Typography-root Typography-bodyCopyBold Typography-colorTextPrimary UserTableFilter-legend"
          >
            Show Me
          </legend>
          <div
            className="Box-root Flex-root Flex-flex Flex-itemGutter gutter"
          >
            <span
              className="SelectField-root UserTableFilter-selectField"
            >
              <select
                aria-label="Search by role"
                className="SelectField-select"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                value=""
              >
                <option
                  value=""
                >
                  All Roles
                </option>
                <optgroup
                  label="Audience"
                >
                  <option
                    value="COMMENTER"
                  >
                    Commenters
                  </option>
                </optgroup>
                <optgroup
                  label="Organization"
                >
                  <option
                    value="ADMIN"
                  >
                    Admins
                  </option>
                  <option
                    value="MODERATOR"
                  >
                    Moderators
                  </option>
                  <option
                    value="STAFF"
                  >
                    Staff
                  </option>
                </optgroup>
              </select>
              <span
                aria-hidden={true}
                className="SelectField-afterWrapper"
              >
                <span
                  aria-hidden="true"
                  className="Icon-root Icon-sm"
                >
                  expand_more
                </span>
              </span>
            </span>
            <span
              className="SelectField-root UserTableFilter-selectField"
            >
              <select
                aria-label="Search by user status"
                className="SelectField-select"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                value=""
              >
                <option
                  value=""
                >
                  All Statuses
                </option>
                <option
                  value="ACTIVE"
                >
                  Active
                </option>
                <option
                  value="SUSPENDED"
                >
                  Suspended
                </option>
                <option
                  value="BANNED"
                >
                  Banned
                </option>
              </select>
              <span
                aria-hidden={true}
                className="SelectField-afterWrapper"
              >
                <span
                  aria-hidden="true"
                  className="Icon-root Icon-sm"
                >
                  expand_more
                </span>
              </span>
            </span>
          </div>
        </fieldset>
      </div>
      <div
        data-testid="invite-users"
      >
        <button
          className="BaseButton-root Button-root Button-sizeRegular Button-colorPrimary Button-variantFilled"
          data-testid="invite-users-button"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          onTouchEnd={[Function]}
          type="button"
        >
          Invite
        </button>
      </div>
    </div>
    <div
      className="Box-root HorizontalGutter-root HorizontalGutter-double"
    >
      <table
        className="Table-root Table-fullWidth"
      >
        <thead
          className="TableHead-root"
        >
          <tr
            className="TableRow-root"
          >
            <th
              className="TableCell-root UserTable-usernameColumn TableCell-header"
            >
              Username
            </th>
            <th
              className="TableCell-root UserTable-emailColumn TableCell-header"
            >
              Email
            </th>
            <th
              className="TableCell-root UserTable-memberSinceColumn TableCell-header"
            >
              Member Since
            </th>
            <th
              className="TableCell-root UserTable-roleColumn TableCell-header"
            >
              Role
            </th>
            <th
              className="TableCell-root UserTable-statusColumn TableCell-header"
            >
              Status
            </th>
          </tr>
        </thead>
        <tbody
          className="TableBody-root"
        >
          <tr
            className="TableRow-root TableRow-body"
          >
            <td
              className="TableCell-root UserRow-usernameColumn TableCell-body"
            >
              <button
                className="BaseButton-root Button-root Button-sizeRegular Button-colorRegular Button-variantRegular UserRow-usernameButton"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseOut={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                type="button"
              >
                Markus
              </button>
            </td>
            <td
              className="TableCell-root UserRow-emailColumn TableCell-body"
            >
              <a
                className="TextLink-root"
                href="mailto:markus@test.com"
              >
                markus@test.com
              </a>
            </td>
            <td
              className="TableCell-root UserRow-memberSinceColumn TableCell-body"
            >
              07/06/2018
            </td>
            <td
              className="TableCell-root UserRow-roleColumn TableCell-body"
            >
              <div
                className="ButtonPadding-root"
              >
                <span
                  className="UserRoleText-root"
                >
                  Admin
                </span>
              </div>
            </td>
            <td
              className="TableCell-root UserRow-statusColumn TableCell-body"
            >
              <div
                className="ButtonPadding-root"
              >
                <div
                  className="Box-root Typography-root Typography-detail Typography-colorSuccess"
                >
                  <div
                    className="Box-root Flex-root Flex-flex Flex-halfItemGutter Flex-alignCenter gutter"
                  >
                    <div>
                      Active
                    </div>
                  </div>
                </div>
              </div>
            </td>
          </tr>
          <tr
            className="TableRow-root TableRow-body"
          >
            <td
              className="TableCell-root UserRow-usernameColumn TableCell-body"
            >
              <button
                className="BaseButton-root Button-root Button-sizeRegular Button-colorRegular Button-variantRegular UserRow-usernameButton"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseOut={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                type="button"
              >
                Lukas
              </button>
            </td>
            <td
              className="TableCell-root UserRow-emailColumn TableCell-body"
            >
              <a
                className="TextLink-root"
                href="mailto:lukas@test.com"
              >
                lukas@test.com
              </a>
            </td>
            <td
              className="TableCell-root UserRow-memberSinceColumn TableCell-body"
            >
              07/06/2018
            </td>
            <td
              className="TableCell-root UserRow-roleColumn TableCell-body"
            >
              <div
                className="Popover-root"
              >
                <button
                  aria-label="Change role"
                  className="BaseButton-root Button-root Button-sizeSmall Button-colorRegular Button-variantRegular UserRoleChange-button"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  type="button"
                >
                  <span
                    className="UserRoleText-root"
                  >
                    Moderator
                  </span>
                  <span
                    aria-hidden="true"
                    className="Icon-root Icon-lg ButtonIcon-root"
                  >
                    arrow_drop_down
                  </span>
                </button>
                <div
                  aria-hidden={true}
                  aria-labelledby="community-roleChange-ariainfo"
                  id="community-roleChange"
                  role="popup"
                >
                  <div
                    className="AriaInfo-root"
                    id="community-roleChange-ariainfo"
                  >
                    A dropdown to change the user role
                  </div>
                </div>
              </div>
            </td>
            <td
              className="TableCell-root UserRow-statusColumn TableCell-body"
            >
              <div
                className="ButtonPadding-root"
              >
                <div
                  className="Box-root Typography-root Typography-detail Typography-colorSuccess"
                >
                  <div
                    className="Box-root Flex-root Flex-flex Flex-halfItemGutter Flex-alignCenter gutter"
                  >
                    <div>
                      Active
                    </div>
                  </div>
                </div>
              </div>
            </td>
          </tr>
          <tr
            className="TableRow-root TableRow-body"
          >
            <td
              className="TableCell-root UserRow-usernameColumn TableCell-body"
            >
              <button
                className="BaseButton-root Button-root Button-sizeRegular Button-colorRegular Button-variantRegular UserRow-usernameButton"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseOut={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                type="button"
              >
                Huy
              </button>
            </td>
            <td
              className="TableCell-root UserRow-emailColumn TableCell-body"
            >
              <a
                className="TextLink-root"
                href="mailto:huy@test.com"
              >
                huy@test.com
              </a>
            </td>
            <td
              className="TableCell-root UserRow-memberSinceColumn TableCell-body"
            >
              07/06/2018
            </td>
            <td
              className="TableCell-root UserRow-roleColumn TableCell-body"
            >
              <div
                className="Popover-root"
              >
                <button
                  aria-label="Change role"
                  className="BaseButton-root Button-root Button-sizeSmall Button-colorRegular Button-variantRegular UserRoleChange-button"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  type="button"
                >
                  <span
                    className="UserRoleText-root"
                  >
                    Staff
                  </span>
                  <span
                    aria-hidden="true"
                    className="Icon-root Icon-lg ButtonIcon-root"
                  >
                    arrow_drop_down
                  </span>
                </button>
                <div
                  aria-hidden={true}
                  aria-labelledby="community-roleChange-ariainfo"
                  id="community-roleChange"
                  role="popup"
                >
                  <div
                    className="AriaInfo-root"
                    id="community-roleChange-ariainfo"
                  >
                    A dropdown to change the user role
                  </div>
                </div>
              </div>
            </td>
            <td
              className="TableCell-root UserRow-statusColumn TableCell-body"
            >
              <div
                className="ButtonPadding-root"
              >
                <div
                  className="Box-root Typography-root Typography-detail Typography-colorSuccess"
                >
                  <div
                    className="Box-root Flex-root Flex-flex Flex-halfItemGutter Flex-alignCenter gutter"
                  >
                    <div>
                      Active
                    </div>
                  </div>
                </div>
              </div>
            </td>
          </tr>
          <tr
            className="TableRow-root TableRow-body"
          >
            <td
              className="TableCell-root UserRow-usernameColumn TableCell-body"
            >
              <button
                className="BaseButton-root Button-root Button-sizeRegular Button-colorRegular Button-variantRegular UserRow-usernameButton"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseOut={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                type="button"
              >
                Isabelle
              </button>
            </td>
            <td
              className="TableCell-root UserRow-emailColumn TableCell-body"
            >
              <a
                className="TextLink-root"
                href="mailto:isabelle@test.com"
              >
                isabelle@test.com
              </a>
            </td>
            <td
              className="TableCell-root UserRow-memberSinceColumn TableCell-body"
            >
              07/06/2018
            </td>
            <td
              className="TableCell-root UserRow-roleColumn TableCell-body"
            >
              <div
                className="Popover-root"
              >
                <button
                  aria-label="Change role"
                  className="BaseButton-root Button-root Button-sizeSmall Button-colorRegular Button-variantRegular UserRoleChange-button"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  type="button"
                >
                  <span
                    className="UserRoleText-root UserRoleText-commenter"
                  >
                    Commenter
                  </span>
                  <span
                    aria-hidden="true"
                    className="Icon-root Icon-lg ButtonIcon-root"
                  >
                    arrow_drop_down
                  </span>
                </button>
                <div
                  aria-hidden={true}
                  aria-labelledby="community-roleChange-ariainfo"
                  id="community-roleChange"
                  role="popup"
                >
                  <div
                    className="AriaInfo-root"
                    id="community-roleChange-ariainfo"
                  >
                    A dropdown to change the user role
                  </div>
                </div>
              </div>
            </td>
            <td
              className="TableCell-root UserRow-statusColumn TableCell-body"
            >
              <div
                className="Popover-root"
              >
                <button
                  aria-label="Change user status"
                  className="BaseButton-root Button-root Button-sizeSmall Button-colorRegular Button-variantRegular UserStatusChange-button UserStatusChange-fullWidth"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  type="button"
                >
                  <div
                    className="Box-root Typography-root Typography-detail Typography-colorSuccess"
                  >
                    <div
                      className="Box-root Flex-root Flex-flex Flex-halfItemGutter Flex-alignCenter gutter"
                    >
                      <div>
                        Active
                      </div>
                    </div>
                  </div>
                  <span
                    aria-hidden="true"
                    className="Icon-root Icon-lg ButtonIcon-root"
                  >
                    arrow_drop_down
                  </span>
                </button>
                <div
                  aria-hidden={true}
                  aria-labelledby="community-statusChange-ariainfo"
                  id="community-statusChange"
                  role="popup"
                >
                  <div
                    className="AriaInfo-root"
                    id="community-statusChange-ariainfo"
                  >
                    A dropdown to change the user status
                  </div>
                </div>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`renders empty community 1`] = `
<div
  className="MainLayout-root Community-root"
  data-testid="community-container"
>
  <div
    className="Box-root HorizontalGutter-root HorizontalGutter-double"
  >
    <div
      className="Box-root Flex-root Flex-flex Flex-doubleItemGutter Flex-justifySpaceBetween Flex-alignFlexEnd gutter"
    >
      <div
        className="Box-root Flex-root Flex-flex"
      >
        <fieldset
          className="FieldSet-root"
        >
          <legend
            className="Box-root Typography-root Typography-bodyCopyBold Typography-colorTextPrimary UserTableFilter-legend"
          >
            Search
          </legend>
          <form
            autoComplete="off"
            id="configure-form"
            onSubmit={[Function]}
          >
            <div
              className="TextField-root UserTableFilter-textField"
            >
              <input
                aria-label="Search by username or email address"
                className="TextField-input TextField-colorRegular TextField-seamlessAdornment"
                name="search"
                onChange={[Function]}
                placeholder="Search by username or email address..."
                type="text"
                value=""
              />
              <div
                className="TextField-adornment"
              >
                <button
                  aria-label="Search"
                  className="BaseButton-root Button-root Button-sizeRegular Button-colorDark Button-variantAdornment UserTableFilter-adornment"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  type="submit"
                >
                  <span
                    aria-hidden="true"
                    className="Icon-root Icon-md"
                  >
                    search
                  </span>
                </button>
              </div>
            </div>
          </form>
        </fieldset>
        <fieldset
          className="FieldSet-root"
        >
          <legend
            className="Box-root Typography-root Typography-bodyCopyBold Typography-colorTextPrimary UserTableFilter-legend"
          >
            Show Me
          </legend>
          <div
            className="Box-root Flex-root Flex-flex Flex-itemGutter gutter"
          >
            <span
              className="SelectField-root UserTableFilter-selectField"
            >
              <select
                aria-label="Search by role"
                className="SelectField-select"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                value=""
              >
                <option
                  value=""
                >
                  All Roles
                </option>
                <optgroup
                  label="Audience"
                >
                  <option
                    value="COMMENTER"
                  >
                    Commenters
                  </option>
                </optgroup>
                <optgroup
                  label="Organization"
                >
                  <option
                    value="ADMIN"
                  >
                    Admins
                  </option>
                  <option
                    value="MODERATOR"
                  >
                    Moderators
                  </option>
                  <option
                    value="STAFF"
                  >
                    Staff
                  </option>
                </optgroup>
              </select>
              <span
                aria-hidden={true}
                className="SelectField-afterWrapper"
              >
                <span
                  aria-hidden="true"
                  className="Icon-root Icon-sm"
                >
                  expand_more
                </span>
              </span>
            </span>
            <span
              className="SelectField-root UserTableFilter-selectField"
            >
              <select
                aria-label="Search by user status"
                className="SelectField-select"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                value=""
              >
                <option
                  value=""
                >
                  All Statuses
                </option>
                <option
                  value="ACTIVE"
                >
                  Active
                </option>
                <option
                  value="SUSPENDED"
                >
                  Suspended
                </option>
                <option
                  value="BANNED"
                >
                  Banned
                </option>
              </select>
              <span
                aria-hidden={true}
                className="SelectField-afterWrapper"
              >
                <span
                  aria-hidden="true"
                  className="Icon-root Icon-sm"
                >
                  expand_more
                </span>
              </span>
            </span>
          </div>
        </fieldset>
      </div>
      <div
        data-testid="invite-users"
      >
        <button
          className="BaseButton-root Button-root Button-sizeRegular Button-colorPrimary Button-variantFilled"
          data-testid="invite-users-button"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          onTouchEnd={[Function]}
          type="button"
        >
          Invite
        </button>
      </div>
    </div>
    <div
      className="Box-root HorizontalGutter-root HorizontalGutter-double"
    >
      <table
        className="Table-root Table-fullWidth"
      >
        <thead
          className="TableHead-root"
        >
          <tr
            className="TableRow-root"
          >
            <th
              className="TableCell-root UserTable-usernameColumn TableCell-header"
            >
              Username
            </th>
            <th
              className="TableCell-root UserTable-emailColumn TableCell-header"
            >
              Email
            </th>
            <th
              className="TableCell-root UserTable-memberSinceColumn TableCell-header"
            >
              Member Since
            </th>
            <th
              className="TableCell-root UserTable-roleColumn TableCell-header"
            >
              Role
            </th>
            <th
              className="TableCell-root UserTable-statusColumn TableCell-header"
            >
              Status
            </th>
          </tr>
        </thead>
        <tbody
          className="TableBody-root"
        />
      </table>
      <p
        className="Box-root Typography-root Typography-bodyCopyBold Typography-colorTextPrimary Typography-alignCenter EmptyMessage-root"
      >
        We could not find anyone in your community matching your criteria.
      </p>
    </div>
  </div>
</div>
`;

exports[`suspend user 1`] = `
<div
  aria-labelledby="suspendModal-title"
  className="Modal-root"
  onKeyDown={[Function]}
  role="modal"
>
  <div
    className="Backdrop-root Backdrop-active"
    data-testid="backdrop"
    onClick={[Function]}
  />
  <div
    className="Modal-scroll"
  >
    <div
      className="Modal-alignContainer1"
    >
      <div
        className="Modal-alignContainer2"
      >
        <div
          className="Modal-wrapper"
        >
          <div
            onFocus={[Function]}
            tabIndex={0}
          />
          <div
            tabIndex={-1}
          />
          <div
            className="Card-root SuspendModal-card"
          >
            <button
              className="BaseButton-root CloseButton-root"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              onTouchEnd={[Function]}
              type="button"
            >
              <span
                aria-hidden="true"
                className="Icon-root Icon-md CloseButton-icon"
              >
                close
              </span>
            </button>
            <div
              className="Box-root HorizontalGutter-root HorizontalGutter-double"
            >
              <div
                className="Box-root HorizontalGutter-root HorizontalGutter-full"
              >
                <h1
                  className="Box-root Typography-root Typography-header2 Typography-colorTextPrimary"
                  id="suspendModal-title"
                >
                  Suspend 
                  <strong>
                    Isabelle
                  </strong>
                  ?
                </h1>
              </div>
              <p
                className="Box-root Typography-root Typography-bodyCopy Typography-colorTextPrimary"
              >
                Once suspended, this user will no longer be able to comment, use
reactions, or report comments.
              </p>
              <h1
                className="Box-root Typography-root Typography-header3 Typography-colorTextPrimary"
              >
                Select suspension duration
              </h1>
              <div
                className="Box-root HorizontalGutter-root HorizontalGutter-half"
              >
                <div
                  className="Box-root Flex-root RadioButton-root SuspendModal-radioButton Flex-flex Flex-alignCenter"
                >
                  <input
                    checked={false}
                    className="RadioButton-input"
                    id="duration-3600"
                    name="duration"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    type="radio"
                    value="10800"
                  />
                  <label
                    className="RadioButton-label"
                    htmlFor="duration-3600"
                  >
                    <span>
                      1 hour
                    </span>
                  </label>
                </div>
                <div
                  className="Box-root Flex-root RadioButton-root SuspendModal-radioButton Flex-flex Flex-alignCenter"
                >
                  <input
                    checked={true}
                    className="RadioButton-input"
                    id="duration-10800"
                    name="duration"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    type="radio"
                    value="10800"
                  />
                  <label
                    className="RadioButton-label"
                    htmlFor="duration-10800"
                  >
                    <span>
                      3 hours
                    </span>
                  </label>
                </div>
                <div
                  className="Box-root Flex-root RadioButton-root SuspendModal-radioButton Flex-flex Flex-alignCenter"
                >
                  <input
                    checked={false}
                    className="RadioButton-input"
                    id="duration-86400"
                    name="duration"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    type="radio"
                    value="10800"
                  />
                  <label
                    className="RadioButton-label"
                    htmlFor="duration-86400"
                  >
                    <span>
                      24 hours
                    </span>
                  </label>
                </div>
                <div
                  className="Box-root Flex-root RadioButton-root SuspendModal-radioButton Flex-flex Flex-alignCenter"
                >
                  <input
                    checked={false}
                    className="RadioButton-input"
                    id="duration-604800"
                    name="duration"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    type="radio"
                    value="10800"
                  />
                  <label
                    className="RadioButton-label"
                    htmlFor="duration-604800"
                  >
                    <span>
                      7 days
                    </span>
                  </label>
                </div>
              </div>
              <div
                className="CheckBox-root"
              >
                <input
                  checked={false}
                  className="CheckBox-input"
                  id="suspend-edit-message"
                  name="suspend-edit-message"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  type="checkbox"
                />
                <label
                  className="CheckBox-label"
                  htmlFor="suspend-edit-message"
                >
                  <span
                    className="CheckBox-labelSpan"
                  >
                    Customize suspension email message
                  </span>
                </label>
              </div>
              <div
                className="Box-root Flex-root Flex-flex Flex-halfItemGutter Flex-justifyFlexEnd gutter"
              >
                <button
                  className="BaseButton-root Button-root Button-sizeRegular Button-colorRegular Button-variantOutlined"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  type="button"
                >
                  Cancel
                </button>
                <button
                  className="BaseButton-root Button-root Button-sizeRegular Button-colorPrimary Button-variantFilled"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  type="button"
                >
                  Suspend User
                </button>
              </div>
            </div>
          </div>
          <div
            onFocus={[Function]}
            tabIndex={0}
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`suspend user with custom message 1`] = `
<div
  aria-labelledby="suspendModal-title"
  className="Modal-root"
  onKeyDown={[Function]}
  role="modal"
>
  <div
    className="Backdrop-root Backdrop-active"
    data-testid="backdrop"
    onClick={[Function]}
  />
  <div
    className="Modal-scroll"
  >
    <div
      className="Modal-alignContainer1"
    >
      <div
        className="Modal-alignContainer2"
      >
        <div
          className="Modal-wrapper"
        >
          <div
            onFocus={[Function]}
            tabIndex={0}
          />
          <div
            tabIndex={-1}
          />
          <div
            className="Card-root SuspendModal-card"
          >
            <button
              className="BaseButton-root CloseButton-root"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              onTouchEnd={[Function]}
              type="button"
            >
              <span
                aria-hidden="true"
                className="Icon-root Icon-md CloseButton-icon"
              >
                close
              </span>
            </button>
            <div
              className="Box-root HorizontalGutter-root HorizontalGutter-double"
            >
              <div
                className="Box-root HorizontalGutter-root HorizontalGutter-full"
              >
                <h1
                  className="Box-root Typography-root Typography-header2 Typography-colorTextPrimary"
                  id="suspendModal-title"
                >
                  Suspend 
                  <strong>
                    Isabelle
                  </strong>
                  ?
                </h1>
              </div>
              <p
                className="Box-root Typography-root Typography-bodyCopy Typography-colorTextPrimary"
              >
                Once suspended, this user will no longer be able to comment, use
reactions, or report comments.
              </p>
              <h1
                className="Box-root Typography-root Typography-header3 Typography-colorTextPrimary"
              >
                Select suspension duration
              </h1>
              <div
                className="Box-root HorizontalGutter-root HorizontalGutter-half"
              >
                <div
                  className="Box-root Flex-root RadioButton-root SuspendModal-radioButton Flex-flex Flex-alignCenter"
                >
                  <input
                    checked={false}
                    className="RadioButton-input"
                    id="duration-3600"
                    name="duration"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    type="radio"
                    value="10800"
                  />
                  <label
                    className="RadioButton-label"
                    htmlFor="duration-3600"
                  >
                    <span>
                      1 hour
                    </span>
                  </label>
                </div>
                <div
                  className="Box-root Flex-root RadioButton-root SuspendModal-radioButton Flex-flex Flex-alignCenter"
                >
                  <input
                    checked={true}
                    className="RadioButton-input"
                    id="duration-10800"
                    name="duration"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    type="radio"
                    value="10800"
                  />
                  <label
                    className="RadioButton-label"
                    htmlFor="duration-10800"
                  >
                    <span>
                      3 hours
                    </span>
                  </label>
                </div>
                <div
                  className="Box-root Flex-root RadioButton-root SuspendModal-radioButton Flex-flex Flex-alignCenter"
                >
                  <input
                    checked={false}
                    className="RadioButton-input"
                    id="duration-86400"
                    name="duration"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    type="radio"
                    value="10800"
                  />
                  <label
                    className="RadioButton-label"
                    htmlFor="duration-86400"
                  >
                    <span>
                      24 hours
                    </span>
                  </label>
                </div>
                <div
                  className="Box-root Flex-root RadioButton-root SuspendModal-radioButton Flex-flex Flex-alignCenter"
                >
                  <input
                    checked={false}
                    className="RadioButton-input"
                    id="duration-604800"
                    name="duration"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    type="radio"
                    value="10800"
                  />
                  <label
                    className="RadioButton-label"
                    htmlFor="duration-604800"
                  >
                    <span>
                      7 days
                    </span>
                  </label>
                </div>
              </div>
              <div
                className="CheckBox-root"
              >
                <input
                  checked={false}
                  className="CheckBox-input"
                  id="suspend-edit-message"
                  name="suspend-edit-message"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  type="checkbox"
                />
                <label
                  className="CheckBox-label"
                  htmlFor="suspend-edit-message"
                >
                  <span
                    className="CheckBox-labelSpan"
                  >
                    Customize suspension email message
                  </span>
                </label>
              </div>
              <div
                className="Box-root Flex-root Flex-flex Flex-halfItemGutter Flex-justifyFlexEnd gutter"
              >
                <button
                  className="BaseButton-root Button-root Button-sizeRegular Button-colorRegular Button-variantOutlined"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  type="button"
                >
                  Cancel
                </button>
                <button
                  className="BaseButton-root Button-root Button-sizeRegular Button-colorPrimary Button-variantFilled"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  type="button"
                >
                  Suspend User
                </button>
              </div>
            </div>
          </div>
          <div
            onFocus={[Function]}
            tabIndex={0}
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`suspend user with custom timeout 1`] = `
<div
  aria-labelledby="suspendModal-title"
  className="Modal-root"
  onKeyDown={[Function]}
  role="modal"
>
  <div
    className="Backdrop-root Backdrop-active"
    data-testid="backdrop"
    onClick={[Function]}
  />
  <div
    className="Modal-scroll"
  >
    <div
      className="Modal-alignContainer1"
    >
      <div
        className="Modal-alignContainer2"
      >
        <div
          className="Modal-wrapper"
        >
          <div
            onFocus={[Function]}
            tabIndex={0}
          />
          <div
            tabIndex={-1}
          />
          <div
            className="Card-root SuspendModal-card"
          >
            <button
              className="BaseButton-root CloseButton-root"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              onTouchEnd={[Function]}
              type="button"
            >
              <span
                aria-hidden="true"
                className="Icon-root Icon-md CloseButton-icon"
              >
                close
              </span>
            </button>
            <div
              className="Box-root HorizontalGutter-root HorizontalGutter-double"
            >
              <div
                className="Box-root HorizontalGutter-root HorizontalGutter-full"
              >
                <h1
                  className="Box-root Typography-root Typography-header2 Typography-colorTextPrimary"
                  id="suspendModal-title"
                >
                  Suspend 
                  <strong>
                    Isabelle
                  </strong>
                  ?
                </h1>
              </div>
              <p
                className="Box-root Typography-root Typography-bodyCopy Typography-colorTextPrimary"
              >
                Once suspended, this user will no longer be able to comment, use
reactions, or report comments.
              </p>
              <h1
                className="Box-root Typography-root Typography-header3 Typography-colorTextPrimary"
              >
                Select suspension duration
              </h1>
              <div
                className="Box-root HorizontalGutter-root HorizontalGutter-half"
              >
                <div
                  className="Box-root Flex-root RadioButton-root SuspendModal-radioButton Flex-flex Flex-alignCenter"
                >
                  <input
                    checked={false}
                    className="RadioButton-input"
                    id="duration-3600"
                    name="duration"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    type="radio"
                    value="10800"
                  />
                  <label
                    className="RadioButton-label"
                    htmlFor="duration-3600"
                  >
                    <span>
                      1 hour
                    </span>
                  </label>
                </div>
                <div
                  className="Box-root Flex-root RadioButton-root SuspendModal-radioButton Flex-flex Flex-alignCenter"
                >
                  <input
                    checked={true}
                    className="RadioButton-input"
                    id="duration-10800"
                    name="duration"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    type="radio"
                    value="10800"
                  />
                  <label
                    className="RadioButton-label"
                    htmlFor="duration-10800"
                  >
                    <span>
                      3 hours
                    </span>
                  </label>
                </div>
                <div
                  className="Box-root Flex-root RadioButton-root SuspendModal-radioButton Flex-flex Flex-alignCenter"
                >
                  <input
                    checked={false}
                    className="RadioButton-input"
                    id="duration-86400"
                    name="duration"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    type="radio"
                    value="10800"
                  />
                  <label
                    className="RadioButton-label"
                    htmlFor="duration-86400"
                  >
                    <span>
                      24 hours
                    </span>
                  </label>
                </div>
                <div
                  className="Box-root Flex-root RadioButton-root SuspendModal-radioButton Flex-flex Flex-alignCenter"
                >
                  <input
                    checked={false}
                    className="RadioButton-input"
                    id="duration-604800"
                    name="duration"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    type="radio"
                    value="10800"
                  />
                  <label
                    className="RadioButton-label"
                    htmlFor="duration-604800"
                  >
                    <span>
                      7 days
                    </span>
                  </label>
                </div>
              </div>
              <div
                className="CheckBox-root"
              >
                <input
                  checked={false}
                  className="CheckBox-input"
                  id="suspend-edit-message"
                  name="suspend-edit-message"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  type="checkbox"
                />
                <label
                  className="CheckBox-label"
                  htmlFor="suspend-edit-message"
                >
                  <span
                    className="CheckBox-labelSpan"
                  >
                    Customize suspension email message
                  </span>
                </label>
              </div>
              <div
                className="Box-root Flex-root Flex-flex Flex-halfItemGutter Flex-justifyFlexEnd gutter"
              >
                <button
                  className="BaseButton-root Button-root Button-sizeRegular Button-colorRegular Button-variantOutlined"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  type="button"
                >
                  Cancel
                </button>
                <button
                  className="BaseButton-root Button-root Button-sizeRegular Button-colorPrimary Button-variantFilled"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  type="button"
                >
                  Suspend User
                </button>
              </div>
            </div>
          </div>
          <div
            onFocus={[Function]}
            tabIndex={0}
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
